[gd_scene load_steps=15 format=3 uid="uid://o4gfinoagwhn"]

[ext_resource type="MeshLibrary" uid="uid://ssv78malycqc" path="res://Scenes/Tilesets/meshlibrary.tres" id="1_2lwcm"]
[ext_resource type="PackedScene" uid="uid://bftsexb11rsxo" path="res://Scenes/Kobold.tscn" id="2_vobhq"]
[ext_resource type="Script" path="res://Scripts/Input/CameraPivot.gd" id="3_xj0at"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerShipMovement.gd" id="4_hyrg4"]
[ext_resource type="Script" path="res://Scripts/Input/CameraShipAlignment.gd" id="4_l5op6"]
[ext_resource type="Script" path="res://Scripts/Input/ShipInput.gd" id="5_2ag44"]
[ext_resource type="Script" path="res://Scripts/ShipBuilder/Ship Stats.gd" id="5_x6tnq"]
[ext_resource type="PackedScene" uid="uid://b0nt4n13a6448" path="res://addons/starlight/Stars.tscn" id="6_dwxkm"]
[ext_resource type="Script" path="res://addons/starlight/StarGenerator.gd" id="7_7b8ov"]
[ext_resource type="Script" path="res://Scripts/ShipBuilder/ShipEditInput.gd" id="7_x7fkd"]
[ext_resource type="Script" path="res://Scripts/ShipBuilder/Ship Builder.gd" id="8_u42rw"]
[ext_resource type="Script" path="res://Scripts/ShipBuilder/Module Placer.gd" id="9_qr1y8"]

[sub_resource type="Environment" id="Environment_b1fdb"]
background_mode = 1
background_energy_multiplier = 0.0
ambient_light_energy = 0.0

[sub_resource type="NavigationMesh" id="NavigationMesh_8nobd"]
geometry_parsed_geometry_type = 1
cell_size = 0.2
agent_height = 1.0
agent_radius = 0.2
agent_max_climb = 0.0

[node name="Space" type="Node3D"]

[node name="Stars" parent="." instance=ExtResource("6_dwxkm")]
script = ExtResource("7_7b8ov")
size = 5000.0
star_count = 100000
rng_seed = 1234
generate_at_origin = false

[node name="Environment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_b1fdb")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.780211, 0.498063, 0.378423, -0.548293, 0.253355, 0.796986, 0.301074, -0.829304, 0.470755, 2.83285, 6.1425, 5.90218)

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(-0.474555, -0.878967, -0.0470589, -0.861751, 0.453034, 0.228355, -0.179397, 0.14892, -0.97244, 2.83285, 6.1425, 5.90218)
light_energy = 0.1

[node name="PlayerCameraPivot" type="Node3D" parent="." node_paths=PackedStringArray("player", "ship")]
transform = Transform3D(0.766044, -0.509274, 0.392194, 0, 0.610145, 0.79229, -0.642788, -0.606929, 0.467398, 0.171193, 0, 0)
script = ExtResource("3_xj0at")
player = NodePath("../PlayerShip/Kobold")
ship = NodePath("../PlayerShip")
zoom_range = Vector2(2, 20)
follow_speed = 2.0

[node name="Camera" type="Camera3D" parent="PlayerCameraPivot"]
transform = Transform3D(1, -8.9407e-08, 0, 0, 1, -8.9407e-08, 0, 0, 1, 0, 0.1, 3)
current = true
fov = 70.0

[node name="ShipCameraPivot" type="Node3D" parent="." node_paths=PackedStringArray("player", "ship")]
transform = Transform3D(1, 0, 0, 0, 0.173648, 0.984808, 0, -0.984808, 0.173648, 0.171193, 0, 0)
script = ExtResource("3_xj0at")
player = NodePath("../PlayerShip/Kobold")
ship = NodePath("../PlayerShip")
zoom_range = Vector2(20, 60)
follow_speed = 2.0
camera_focus = 1

[node name="Camera" type="Camera3D" parent="ShipCameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 1.49012e-08, 0, -1.49012e-08, 1, 0, 0.1, 20)
fov = 70.0

[node name="ShipAlignment" type="Node" parent="ShipCameraPivot"]
script = ExtResource("4_l5op6")

[node name="PlayerShip" type="RigidBody3D" parent="."]
mass = 100.0
gravity_scale = 0.0
linear_damp = 0.2
angular_damp = 5.0
script = ExtResource("4_hyrg4")

[node name="Ship Stats" type="Node" parent="PlayerShip"]
script = ExtResource("5_x6tnq")

[node name="Ship Control Input" type="Node" parent="PlayerShip"]
script = ExtResource("5_2ag44")

[node name="Ship Editing Input" type="Node" parent="PlayerShip"]
script = ExtResource("7_x7fkd")

[node name="Ship Builder" type="Node" parent="PlayerShip/Ship Editing Input"]
script = ExtResource("8_u42rw")

[node name="Module Placer" type="Node" parent="PlayerShip/Ship Editing Input"]
script = ExtResource("9_qr1y8")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="PlayerShip"]
navigation_mesh = SubResource("NavigationMesh_8nobd")

[node name="ShipGridMap" type="GridMap" parent="PlayerShip/NavigationRegion3D"]
mesh_library = ExtResource("1_2lwcm")
cell_center_x = false
cell_center_y = false
cell_center_z = false
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="Module_placing_preview" type="Node3D" parent="PlayerShip/NavigationRegion3D/ShipGridMap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.40625, 0.94212, 0)

[node name="PreviewMesh" type="MeshInstance3D" parent="PlayerShip/NavigationRegion3D/ShipGridMap/Module_placing_preview"]

[node name="Kobold" parent="PlayerShip" instance=ExtResource("2_vobhq")]

[node name="Statics" type="Node3D" parent="."]

[node name="Asteroid1" type="GridMap" parent="Statics"]
mesh_library = ExtResource("1_2lwcm")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
cell_center_z = false
data = {
"cells": PackedInt32Array(65535, 65523, 0, 0, 65523, 0, 1, 65523, 0, 1, 65524, 0, 2, 65524, 0, 3, 65524, 0, 3, 65523, 0, 2, 65522, 0, 2, 65521, 0, 1, 65521, 0, 0, 65521, 0, 65535, 65521, 0, 65535, 65522, 0, 1, 65522, 0, 65535, 65524, 0, 0, 65524, 0, 2, 65523, 0, 65534, 65521, 0, 65534, 65522, 0, 65533, 65522, 0, 65533, 65523, 0, 65533, 65524, 0, 65532, 65524, 0, 65531, 65523, 0, 65531, 65522, 0, 65532, 65521, 0, 65533, 65521, 0, 65532, 65522, 0, 65532, 65523, 0, 65534, 65524, 0, 65534, 65523, 0, 0, 65522, 0, 0, 65525, 0, 0, 65526, 0, 1, 65526, 0, 2, 65526, 0, 2, 65525, 0, 65535, 65525, 0, 65535, 65520, 0, 0, 65520, 0, 0, 65519, 0, 1, 65520, 0, 2, 65520, 0, 3, 65520, 0, 3, 65521, 0, 4, 65521, 0, 4, 65522, 0, 5, 65522, 0, 5, 65523, 0, 5, 65524, 0, 5, 65525, 0, 4, 65525, 0, 3, 65525, 0, 1, 65525, 0, 4, 65523, 0, 3, 65522, 0, 4, 65524, 0, 20, 65525, 0, 20, 65526, 0, 20, 65527, 0, 21, 65527, 0, 21, 65528, 0, 22, 65528, 0, 22, 65527, 0, 22, 65526, 0, 22, 65525, 0, 22, 65524, 0, 21, 65524, 0, 20, 65524, 0, 19, 65524, 0, 19, 65525, 0, 19, 65526, 0, 19, 65527, 0, 19, 65523, 0, 19, 65522, 0, 20, 65522, 0, 20, 65521, 0, 21, 65522, 0, 21, 65523, 0, 23, 65525, 0, 23, 65526, 0, 23, 65527, 0, 23, 65528, 0, 23, 65529, 0, 23, 65530, 0, 24, 65527, 0, 24, 65526, 0, 24, 65525, 0, 23, 65524, 0, 21, 65525, 0, 20, 65528, 0, 22, 65529, 0, 22, 65530, 0, 21, 65530, 0, 20, 65530, 0, 20, 65529, 0, 20, 65523, 0, 21, 65526, 0, 18, 65524, 0, 18, 65525, 0, 21, 65529, 0, 65558, 65527, 0, 65557, 65527, 0, 65557, 65528, 0, 65558, 65528, 0, 65558, 65526, 0, 65557, 65526, 0, 65557, 65525, 0, 65556, 65525, 0, 65556, 65524, 0, 65557, 65524, 0, 65558, 65525, 0, 65558, 65529, 0, 65559, 65529, 0, 65559, 65528, 0, 65536, 65522, 0, 131071, 65522, 0, 131071, 65523, 0, 65536, 65523, 0, 65536, 65524, 0, 65537, 65524, 0, 65538, 65524, 0, 65539, 65524, 0, 65539, 65523, 0, 65538, 65523, 0, 65538, 65522, 0, 65537, 65522, 0, 131070, 65523, 0, 131069, 65523, 0, 131069, 65522, 0, 131068, 65522, 0, 131070, 65522, 0, 131071, 65521, 0, 65536, 65521, 0, 65537, 65521, 0, 65539, 65522, 0, 65540, 65522, 0, 65540, 65523, 0, 65539, 65521, 0, 65538, 65521, 0, 65537, 65523, 0, 65537, 65525, 0, 65538, 65525, 0, 131071, 65524, 0)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)
